feat(markets): add /markets/latest page for normalized snapshots
- Add lib/markets.ts to read normalized JSON files from content/knowledge/outputs
- Create app/markets/latest page with card-based market display
- Update sync-knowledge workflow to also sync outputs directory
- Add sample markets-normalized-2026-02-27.json for testing

--- a/.github/workflows/sync-knowledge.yml
+++ b/.github/workflows/sync-knowledge.yml
@@ -27,9 +27,17 @@ jobs:
 
       - name: Sync files
         run: |
+          # Sync knowledge directory
           rm -rf content/knowledge
           mkdir -p content/knowledge
           cp -r source/knowledge/. content/knowledge/
+          
+          # Sync outputs directory (for normalized snapshots)
+          rm -rf content/knowledge/outputs
+          mkdir -p content/knowledge/outputs
+          if [ -d "source/knowledge/outputs" ]; then
+            cp -r source/knowledge/outputs/. content/knowledge/outputs/
+          fi
 
       - name: Commit changes (if any)
         run: |
@@ -40,5 +48,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add content/knowledge
-          git commit -m "chore(sync): update knowledge from 42space-task"
+          git commit -m "chore(sync): update knowledge and outputs from 42space-task"
           git push
